# --testing

./: .pre-commit-config.yaml  README.md  pyproject.toml
app/: exceptions.py  main.py  repository.py  storage.py  tasks.json  utils.py
app/data_accesor_layer/: repository.py
app/messages/main/: consts.py  message_formatter.py
app/messages/service/: consts.py
app/messages/storage/: consts.py  message_formatter.py
app/model/: __init__.py  task.py
app/model/enums/: __init__.py  category.py  priority.py  status.py
app/service_layer/: __init__.py  dependencies.py  service.py  service_helper.py
app/storage_layer/: storage.py  tasks.json
tests/: conftest.py
tests/fixtures/: repository.py  service.py  service_helper.py  storage.py
tests/messages/: storage.py
tests/unit/: test_repository.py  test_service.py  test_service_helper.py  test_storage.py  test_utils.py
tests/unit/__snapshots__/: test_repository.ambr  test_storage.ambr
